--- a/training.cfg
+++ b/training.cfg
@@ -40,6 +40,9 @@ alias "clear_smokes" "record record.record; ent_fire smokegrenade_projectile kil
 alias "+alt" "bind X clear_smokes"
 alias "-alt" "bind X +jumpthrow"
 
+// Misc aliases
+alias "bot_reset" "bot_kick; bot_add_ct; bot_add_ct; bot_add_ct; bot_add_t; bot_add_t; bot_add_t"
+
 // Buy aliases
 alias "buy_vest_helm" "give item_assaultsuit"
 alias "buy_vest_only" "give item_kevlar"
@@ -92,7 +95,7 @@ bind "K" "+fastforward"
 bind "N" "toggle_tp"
 bind "," "bot_add_t"
 bind "." "bot_add_ct"
-bind "/" "bot_kick; god"
+bind "/" "god; bot_reset"
 
 // Bots
 gods
