--- a/training.cfg
+++ b/training.cfg
@@ -13,13 +13,6 @@ mp_autokick "0"
 // Teleportation aliases
 alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con_logfile .; play ui\csgo_ui_crate_item_scroll.wav"
 alias "load_position" "exec banned_ip.log; toggle_noclip_0; play ui\csgo_ui_page_scroll.wav"
-alias "toggle_tp_2" "ent_teleport 2; alias toggle_tp toggle_tp_3"
-alias "toggle_tp_3" "ent_teleport 3; alias toggle_tp toggle_tp_4"
-alias "toggle_tp_4" "ent_teleport 4; alias toggle_tp toggle_tp_5"
-alias "toggle_tp_5" "ent_teleport 5; alias toggle_tp toggle_tp_6"
-alias "toggle_tp_6" "ent_teleport 6; alias toggle_tp toggle_tp_7"
-alias "toggle_tp_7" "ent_teleport 7; alias toggle_tp toggle_tp_2"
-alias "toggle_tp" "toggle_tp_2"
 
 // Timescale aliases
 alias "+fastforward" "host_timescale 5; play ui\cs_info"
@@ -92,7 +85,7 @@ bind "F" "+lookatweapon; r_cleardecals"
 bind "H" "load_position"
 bind "J" "save_position"
 bind "K" "+fastforward"
-bind "N" "toggle_tp"
+bind "N" "ent_teleport 1"
 bind "," "bot_add_t"
 bind "." "bot_add_ct"
 bind "/" "god; bot_reset"
@@ -123,12 +116,13 @@ mp_respawn_on_death_t "1"
 mp_round_restart_delay "1"
 mp_halftime_duration "1"
 mp_c4timer "10"
-mp_roundtime "30"
-mp_roundtime_defuse "30"
-mp_roundtime_hostage "30"
+mp_roundtime "60"
+mp_roundtime_defuse "60"
+mp_roundtime_hostage "60"
 mp_endmatch_votenextmap "0"
 mp_drop_knife_enable "1"
 mp_ignore_round_win_conditions "1"
+mp_radar_showall "1"
 mp_plant_c4_anywhere "1"
 mp_anyone_can_pickup_c4 "1"
 
