--- a/training.cfg
+++ b/training.cfg
@@ -122,6 +122,7 @@ mp_roundtime_hostage "60"
 mp_endmatch_votenextmap "0"
 mp_drop_knife_enable "1"
 mp_ignore_round_win_conditions "1"
+mp_teammates_are_enemies "1"
 mp_radar_showall "1"
 mp_plant_c4_anywhere "1"
 mp_anyone_can_pickup_c4 "1"
