--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,189 +1,161 @@
 ////
-// autoexec.cfg by BasowyBemben
+// autoexec.cfg by MydlanyHeadzik
 ////
 
 ////
-// Rates
+// Network
 ////
-rate "786432"
-cl_cmdrate "128"
-cl_updaterate "128"
-cl_interp "0"
-cl_interp_ratio "1"
-cl_interpolate "1"
-cl_predict "1"
-cl_lagcompensation "1"
-cl_timeout "180"
-net_client_steamdatagram_enable_override "1"
+rate 786432
+cl_timeout 180
+net_client_steamdatagram_enable_override 1
 
 ////
 // Audio
 ////
 
-volume "0.4"
-snd_musicvolume_multiplier_inoverlay "0.1"
-voice_caster_enable "0"
-voice_caster_scale "0.6"
-snd_menumusic_volume "0"
-snd_roundstart_volume "0.06"
-snd_roundend_volume "0.06"
-snd_mapobjective_volume "0.12"
-snd_tensecondwarning_volume "0.06"
-snd_deathcamera_volume "0.12"
-snd_mvp_volume "0.12"
-snd_dzmusic_volume "0.24"
-voice_enable "1"
-voice_forcemicrecord "1"
-voice_mixer_boost "0"
-voice_mixer_mute "0"
-voice_mixer_volume "1.0"
-voice_modenable "1"
-voice_positional "0"
-voice_scale "0.6"
-voice_system_enable "1"
-voice_threshold "2000"
-snd_music_selection "001"
-snd_music_volume_onetime_reset_2 "1"
-snd_mute_losefocus "1"
-snd_mute_mvp_music_live_players "0"
-snd_mix_async "1"
-snd_mix_async_onetime_reset "1"
-snd_mixahead "0.025"
-snd_pitchquality "1"
-snd_dvar_dist_max "2000"
-snd_dvar_dist_min "300"
-snd_duckerattacktime "0.5"
-snd_duckerreleasetime "2.5"
-snd_duckerthreshold "0.15"
-snd_ducking_off "1"
-snd_ducktovolume "0.55"
-snd_front_headphone_position "45"
-snd_rear_headphone_position "135"
-snd_headphone_pan_exponent "3"
-snd_headphone_pan_radial_weight "1"
-snd_hrtf_distance_behind "100"
-snd_hrtf_voice_delay "0.1"
-snd_hwcompat "1"
-snd_rear_speaker_scale "1"
-snd_surround_speakers "0"
-snd_max_same_sounds "5"
-snd_max_same_weapon_sounds "5"
-snd_async_flush
+volume 0.36
+snd_menumusic_volume 0
+snd_roundstart_volume 0.06
+snd_roundaction_volume 0.06
+snd_roundend_volume 0.06
+snd_mapobjective_volume 0.12
+snd_tensecondwarning_volume 0.06
+snd_deathcamera_volume 0.12
+snd_mvp_volume 0.12
+snd_voipvolume 0.24
+sv_voiceenable true
+voice_modenable true
+snd_headphone_eq 0
+snd_spatialize_lerp 0.1
+snd_steamaudio_enable_perspective_correction true
+snd_mute_losefocus false
+snd_mute_mvp_music_live_players true
+snd_mixahead 0.025
+snd_duckerattacktime 0.5
+snd_duckerreleasetime 2.5
+snd_duckerthreshold 0.15
+snd_ducktovolume 0.55
 sound_device_override ""
-cl_mute_all_but_friends_and_party "0"
-sv_voiceenable "1"
-dsp_enhance_stereo "0"
-dsp_slow_cpu "0"
-dsp_reload
+cl_mute_all_but_friends_and_party 0
+cl_mute_enemy_team false
+cl_player_ping_mute 0
 
 ////
 // Video
 ////
-mat_monitorgamma "2.3"
-mat_monitorgamma_tv_enabled "0"
-fps_max "300"
-fps_max_menu "150"
-r_dynamic "0"
-r_drawtracers_firstperson "0"
-r_drawparticles "0"
-engine_no_focus_sleep "50"
-func_break_max_pieces "15"
-mat_powersavingsmode "0"
+fps_max 300
+fps_max_ui 150
+r_fullscreen_gamma 2.3
+r_player_visibility_mode 1
+r_show_build_info false
+engine_no_focus_sleep 60
+func_break_max_pieces 15
 
 ////
 // Mouse
 ////
-sensitivity "1.28" // 800 DPI
-zoom_sensitivity_ratio_mouse "0.92"
-m_rawinput "1"
-m_customaccel "0"
-m_customaccel_exponent "1.05"
-m_customaccel_max "0"
-m_customaccel_scale "0.04"
-m_forward "1"
-m_mouseaccel1 "0"
-m_mouseaccel2 "0"
-m_mousespeed "1"
-m_pitch "0.022"
-m_side "0.8"
-m_yaw "0.022"
+sensitivity 1.28 // 800 DPI
+zoom_sensitivity_ratio 0.92
+m_pitch 0.022
+m_yaw 0.022
 
 ////
 // HUD
 ////
 
 //// General
-cl_hud_background_alpha "0.5"
-cl_hud_bomb_under_radar "1"
-cl_hud_color "6"
-cl_hud_healthammo_style "1"
-cl_hud_playercount_pos "1"
-cl_hud_playercount_showcount "0"
-cl_hud_radar_scale "0.8"
-hud_scaling "0.95"
-hud_showtargetid "1"
-hud_takesshots "0"
+cl_hud_color 1
+cl_hud_radar_scale 1
+hud_scaling 0.9
+hud_showtargetid true
+safezonex 0.98
+safezoney 0.98
 
 //// POV
-viewmodel_presetpos "3" // Classic
-viewmodel_fov "68"
-viewmodel_offset_x "2.5"
-viewmodel_offset_y "0"
-viewmodel_offset_z "-1.5"
-viewmodel_recoil "1"
-cl_viewmodel_shift_left_amt "0.5"
-cl_viewmodel_shift_right_amt "0.25"
-cl_bobcycle "0.98"
-cl_bob_lower_amt "5"
-cl_bobamt_lat "0.33"
-cl_bobamt_vert "0.14"
-cl_righthand "1"
+viewmodel_presetpos 3 // Classic
+viewmodel_fov 68
+viewmodel_offset_x 2.5
+viewmodel_offset_y 0
+viewmodel_offset_z -1.5
 
 //// Radar
-cl_radar_always_centered "0"
-cl_radar_icon_scale_min "0.6"
-cl_radar_rotate "1"
-cl_radar_scale "0.4"
-cl_radar_square_with_scoreboard "0"
+cl_radar_always_centered false
+cl_radar_icon_scale_min 0.6
+cl_radar_rotate true
+cl_radar_scale 0.4
+cl_radar_square_with_scoreboard false
 
 //// Misc
 +cl_show_team_equipment
-cl_use_opens_buy_menu "0"
-closeonbuy "0"
-cl_showloadout "1"
-cl_teammate_colors_show "1"
-cl_autowepswitch "0"
-cl_disablefreezecam "1"
-cl_buywheel_nomousecentering "1"
-cl_quickinventory_lastinv "1"
-cl_show_clan_in_death_notice "0"
-cl_scoreboard_survivors_always_on "0"
-mapoverview_icon_scale "1.0"
+cl_use_opens_buy_menu false
+cl_showloadout true
+cl_teammate_colors_show 1
+cl_quickinventory_lastinv false
+cl_show_clan_in_death_notice false
+cl_scoreboard_survivors_always_on false
+cl_teamcounter_playercount_instead_of_avatars false
+cl_buywheel_nonumberpurchasing true
+cl_buywheel_donate_key 0
+cl_silencer_mode 0
+cl_teamid_overhead_mode 1
+cl_teamid_overhead_colors_show 1
+cl_hide_avatar_images 1
+cl_allow_animated_avatars false
+cl_sanitize_player_names false
+cl_sanitize_muted_players false
+cl_showfps 0
+cl_autohelp true
+cl_scoreboard_mouse_enable_binding +attack2
+cl_ping_fade_distance 300
+cl_ping_fade_deadzone 120
+cl_playerspray_auto_apply false
+mapoverview_icon_scale 1.0
+ui_mainmenu_bkgnd_movie_1016BB11 de_inferno
 
 //// Crosshair
-cl_crosshairalpha "255"
-cl_crosshaircolor "2" // Yellow
-cl_crosshaircolor_r "255"
-cl_crosshaircolor_g "255"
-cl_crosshaircolor_b "0"
-cl_crosshairdot "0"
-cl_crosshairgap "-3"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "1.5"
-cl_crosshairstyle "4"
-cl_crosshairthickness "0.5"
-cl_crosshairusealpha "1"
-cl_fixedcrosshairgap "-4.5"
-cl_crosshair_drawoutline "0"
-cl_crosshair_outlinethickness "0"
-cl_crosshair_dynamic_maxdist_splitratio "0.3"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "0"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "1"
-cl_crosshair_t "0"
-crosshair "1"
+crosshair true
+cl_crosshairstyle 4 // Static
+cl_crosshaircolor 2 // Yellow
+cl_crosshaircolor_r 255
+cl_crosshaircolor_g 255
+cl_crosshaircolor_b 0
+cl_crosshairdot false
+cl_crosshairgap -3
+cl_crosshairgap_useweaponvalue false
+cl_crosshairsize 1.5
+cl_crosshairthickness 1.0
+cl_crosshairusealpha true
+cl_crosshairalpha 190
+cl_crosshair_drawoutline false
+cl_crosshair_outlinethickness 0
+cl_crosshair_dynamic_maxdist_splitratio 0.2
+cl_crosshair_dynamic_splitalpha_innermod 1
+cl_crosshair_dynamic_splitalpha_outermod 0.5
+cl_crosshair_dynamic_splitdist 0
+cl_crosshair_sniper_show_normal_inaccuracy false
+cl_crosshair_sniper_width 1
+cl_crosshair_t false
+cl_crosshair_recoil false
+cl_show_observer_crosshair 2
+cl_crosshair_friendly_warning 1
+
+////
+// Misc
+////
+con_enable true
+gameinstructor_enable false
+cq_netgraph 0
+cq_netgraph_problem_show_auto true
+ui_setting_advertiseforhire_auto 0
+ui_steam_overlay_notification_position bottomleft
+player_nevershow_communityservermessage 1
+mm_dedicated_search_maxping 80
+mm_csgo_community_search_players_min 3
+cl_join_advertise 2
+cl_invites_only_friends false
+spec_replay_autostart false
+cl_color 0
+cl_dm_buyrandomweapons false
 
 ////
 // Aliases
@@ -203,56 +175,53 @@ alias "buy_vest_only" "buy vest" // 650$
 alias "buy_defuser" "buy defuser" // 400$
 alias "buy_flash" "buy flashbang" // 200$
 alias "buy_smoke" "buy smokegrenade" // 300$
-alias "buy_molotov" "buy incgrenade; buy molotov" // T:400$ CT:600$
+alias "buy_molotov" "buy molotov; buy incgrenade" // T:400$ CT:600$
 alias "buy_hegrenade" "buy hegrenade" // 300$
-alias "buy_rifle_1" "buy ak47; buy m4a1"
-alias "buy_rifle_2" "buy galilar; buy famas"
-alias "buy_pistol_1" "buy deagle"
-alias "buy_pistol_2" "buy p250"
+alias "buy_rifle_1" "buy rifle2" // AK, M4
+alias "buy_rifle_2" "buy rifle0" // Galil, Famas
+alias "buy_pistol_1" "buy secondary4" // Deagle
+alias "buy_pistol_2" "buy secondary1" // P250
 
 //// General aliases
-alias "drop_bomb" "use weapon_c4; drop"
+alias "+drop_bomb" "slot3; slot5; drop"
+alias "-drop_bomb" "slot2; slot1"
 alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K half_buy; bind L eco_buy"
 alias "unbind_sets" "unbind H; unbind J; unbind K; unbind L"
 
 //// Volume aliases
-alias "volume_up" "volume_set_60"
-alias "volume_down" "volume_set_20"
+alias "volume_up" "volume_set_80"
+alias "volume_down" "volume_set_40"
 alias "volume_set_0" "alias volume_down volume_set_0; alias volume_up volume_set_20; volume 0.0"
-alias "volume_set_20" "alias volume_down volume_set_0; alias volume_up volume_set_40; volume 0.2"
-alias "volume_set_40" "alias volume_down volume_set_20; alias volume_up volume_set_60; volume 0.4"
-alias "volume_set_60" "alias volume_down volume_set_40; alias volume_up volume_set_80; volume 0.6"
-alias "volume_set_80" "alias volume_down volume_set_60; alias volume_up volume_set_100; volume 0.8"
-alias "volume_set_100" "alias volume_down volume_set_80; alias volume_up volume_set_100; volume 1.0"
-
-//// Mute aliases
-alias "mute_players" "voice_off"
-alias "voice_off" "alias mute_players voice_on; voice_enable 0"
-alias "voice_on" "alias mute_players voice_off; voice_enable 1"
+alias "volume_set_20" "alias volume_down volume_set_0; alias volume_up volume_set_40; volume 0.12"
+alias "volume_set_40" "alias volume_down volume_set_20; alias volume_up volume_set_60; volume 0.24"
+alias "volume_set_60" "alias volume_down volume_set_40; alias volume_up volume_set_80; volume 0.36"
+alias "volume_set_80" "alias volume_down volume_set_60; alias volume_up volume_set_100; volume 0.48"
+alias "volume_set_100" "alias volume_down volume_set_80; alias volume_up volume_set_100; volume 0.60"
 
 //// Radar aliases
-alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 0.8"
-alias "radar_scale_big" "cl_radar_scale 0.6; cl_hud_radar_scale 1.0"
+alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 1.0"
+alias "radar_scale_big" "cl_radar_scale 0.6; cl_hud_radar_scale 1.2"
 alias "+radar_scale" "+use; radar_scale_big"
 alias "-radar_scale" "-use; radar_scale_normal"
 alias "radar_hide" "cl_drawhud_force_radar -1; alias toggle_radar radar_show"
 alias "radar_show" "cl_drawhud_force_radar 1; alias toggle_radar radar_hide"
 alias "toggle_radar" "radar_hide"
 
-//// CTRL+F to present weapon & CTRL+G to drop bomb & CTRL+HJKL) to buy sets
-alias "+ctrl" "+duck; bind F +lookatweapon; bind G drop_bomb; bind_sets"
-alias "-ctrl" "-duck; bind F r_cleardecals; bind G drop; unbind_sets"
+//// CTRL+G to drop bomb & CTRL+HJKL to buy sets
+alias "+ctrl" "+duck; bind G +drop_bomb; bind_sets"
+alias "-ctrl" "-duck; bind G drop; unbind_sets"
 
 //// ALT+C to toggle radar
 alias "+alt" "bind C toggle_radar"
 alias "-alt" "bind C +radar_scale"
 
 //// Increase volume when walking
-alias "+shift" "+speed; volume_up"
-alias "-shift" "-speed; volume_down"
+alias "+shift" "+sprint; volume_up"
+alias "-shift" "-sprint; volume_down"
 
 //// Jump and throw
-alias "+jumpthrow" "+jump; -attack"
+alias "+throw" "-attack; -attack2"
+alias "+jumpthrow" "+jump; +throw"
 alias "-jumpthrow" "-jump"
 
 //// Jump and crouch
@@ -260,27 +229,31 @@ alias "+jumpduck" "+jump; +duck"
 alias "-jumpduck" "-jump; -duck"
 
 //// Show netgrap with scores
-alias "+show_scores" "+showscores; net_graph 1"
-alias "-show_scores" "-showscores; net_graph 0"
+alias "+show_scores" "+showscores; cq_netgraph 1"
+alias "-show_scores" "-showscores; cq_netgraph 0"
 
 ////
 // Binds
 ////
 
+//// Mouse axis
+bind "mouse_x" "yaw"
+bind "mouse_y" "pitch"
+
 //// Mouse keys
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "player_ping"
-bind "MOUSE4" "use weapon_molotov; use weapon_incgrenade; r_cleardecals"
-bind "MOUSE5" "use weapon_flashbang; r_cleardecals"
+bind "MOUSE4" "slot10" // Molotov
+bind "MOUSE5" "slot7" // Flashbang
 bind "MWHEELUP" "+jump"
-bind "MWHEELDOWN" "+jump"
+bind "MWHEELDOWN" ""
 
 //// Function keys
 bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
 bind "TAB" "+show_scores"
-bind "CAPSLOCK" "mute_players"
+unbind "CAPSLOCK"
 bind "SHIFT" "+shift"
 bind "CTRL" "+ctrl"
 bind "ALT" "+alt"
@@ -310,12 +283,12 @@ bind "PGUP" "grenades_4"
 bind "PGDN" "grenades_2"
 
 //// Numeric keys
-bind "1" "slot1; r_cleardecals"
-bind "2" "slot2; r_cleardecals"
-bind "3" "slot3; r_cleardecals"
-bind "4" "use weapon_hegrenade; r_cleardecals"
-bind "5" "use weapon_healthshot; use weapon_c4; r_cleardecals"
-bind "6" "use weapon_decoy; r_cleardecals"
+bind "1" "slot1"
+bind "2" "slot2"
+bind "3" "slot3"
+bind "4" "slot6" // HE Grenade
+bind "5" "slot5" // C4, Healtshot
+bind "6" "slot9" // Decoy
 unbind "7"
 unbind "8"
 unbind "9"
@@ -324,8 +297,8 @@ unbind "0"
 //// Movement keys
 bind "W" "+forward"
 bind "S" "+back"
-bind "A" "+moveleft"
-bind "D" "+moveright"
+bind "A" "+left"
+bind "D" "+right"
 
 //// 1st row (QWERTY) keys
 bind "Q" "+quickinv"
@@ -336,13 +309,13 @@ bind "Y" "messagemode"
 bind "U" "messagemode2"
 unbind "I"
 bind "O" "+radialradio"
-bind "P" "callvote"
+bind "P" "radio2"
 bind "[" "invprev"
 bind "]" "invnext"
 bind "\" "buy_vest_helm; buy_defuser"
 
 //// 2nd row (FGHJKL) keys
-bind "F" "r_cleardecals"
+bind "F" "+lookatweapon"
 bind "G" "drop"
 unbind "H"
 unbind "J"
@@ -350,12 +323,12 @@ unbind "K"
 unbind "L"
 
 //// 3rd row (ZXCVBN) keys
-bind "Z" "use weapon_smokegrenade; r_cleardecals"
+bind "Z" "slot8" // Smoke
 bind "X" "+jumpthrow"
 bind "C" "+radar_scale"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
-bind "N" "toggle cl_righthand"
+bind "N" "clutch_mode_toggle"
 bind "M" "teammenu"
 bind "," "buyammo1"
 bind "." "buyammo2"
@@ -368,49 +341,22 @@ bind "RIGHTARROW" "enemyspot"
 bind "LEFTARROW" "sectorclear"
 
 //// Numeric keyboard keys
-bind "KP_END" "buy_rifle_1" // 1
-bind "KP_DOWNARROW" "buy_rifle_2" // 2
-bind "KP_PGDN" "buy ump45" // 3
-bind "KP_LEFTARROW" "buy awp" // 4
-bind "KP_5" "buy ssg08" // 5
-bind "KP_RIGHTARROW" "buy sg556; buy aug" // 6
-bind "KP_HOME" "buy mac10; buy mp9" // 7
-bind "KP_UPARROW" "buy p90" // 8
-bind "KP_PGUP" "buy negev" // 9
-bind "KP_INS" "buy_defuser" // 0
+bind "KP_1" "buy_rifle_1" // End
+bind "KP_2" "buy_rifle_2" // Down Arrow
+bind "KP_3" "buy ump45" // Page Down
+bind "KP_4" "buy awp" // Left Arrow
+bind "KP_5" "buy ssg08" // Center
+bind "KP_6" "buy sg556; buy aug" // Right Arrow
+bind "KP_7" "buy mac10; buy mp9" // Home
+bind "KP_8" "buy p90" // Up Arrow
+bind "KP_9" "buy negev" // Page Up
+bind "KP_0" "buy_defuser" // Insert
 bind "KP_DEL" "buy taser" // Dot
 bind "KP_ENTER" "buy_vest_helm" // Enter
 bind "KP_MULTIPLY" "buy mag7; buy sawedoff" // Asterisk
-bind "KP_SLASH" "buy xm1014" // Slash
+bind "KP_DIVIDE" "buy xm1014" // Slash
 bind "KP_PLUS" "volume_up" // Plus
 bind "KP_MINUS" "volume_down" // Minus
-
-////
-// Misc
-////
-gameinstructor_enable "0"
-net_graph "0"
-net_graphheight "128"
-net_graphholdsvframerate "0"
-net_graphipc "0"
-net_graphmsecs "400"
-net_graphpos "2"
-net_graphproportionalfont "0"
-net_graphshowinterp "1"
-net_graphshowlatency "1"
-net_graphshowsvframerate "0"
-net_graphsolid "1"
-net_graphtext "1"
-ent_absbox "player"
-ui_setting_advertiseforhire_auto "0"
-ui_steam_overlay_notification_position "bottomright"
-player_nevershow_communityservermessage "1"
-mm_dedicated_search_maxping "80"
-zoom_sensitivity_ratio_joystick "1.0"
-cl_downloadfilter "all"
-cl_disablehtmlmotd "1"
-cl_join_advertise "2"
-cl_showfps "0"
 
 ////
 // Write config
