--- a/training.cfg
+++ b/training.cfg
@@ -1,27 +1,23 @@
 ////
-// training.cfg by BasowyBemben
+// training.cfg by MydlanyHeadzik
 ////
 
 // General
 writeip
-sv_cheats "1"
-sv_infinite_ammo "2"
-game_type "0"
-game_mode "1"
-mp_autokick "0"
+game_type 0
+game_mode 1
+sv_cheats true
+sv_infinite_ammo 2
+sv_regeneration_force_on true
+mp_autokick false
 
-// Teleportation aliases
+// Teleportation aliases (CS:GO)
 alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con_logfile .; play ui\csgo_ui_crate_item_scroll.wav"
-alias "load_position" "exec banned_ip.log; toggle_noclip_0; play ui\csgo_ui_page_scroll.wav"
+alias "load_position" "exec banned_ip.log; noclip 0; play ui\csgo_ui_page_scroll.wav"
 
 // Timescale aliases
-alias "+fastforward" "host_timescale 5; play ui\cs_info"
+alias "+fastforward" "host_timescale 5"
 alias "-fastforward" "host_timescale 1"
-
-// Toggle noclip aliases
-alias "toggle_noclip_0" "noclip 0; alias toggle_noclip toggle_noclip_1"
-alias "toggle_noclip_1" "noclip 1; alias toggle_noclip toggle_noclip_0"
-alias "toggle_noclip" "toggle_noclip_1"
 
 // Toggle camera aliases
 alias "toggle_cam_1" "cam_command 1; alias toggle_cam toggle_cam_2"
@@ -29,12 +25,9 @@ alias "toggle_cam_2" "cam_command 2; alias toggle_cam toggle_cam_1"
 alias "toggle_cam" "toggle_cam_1"
 
 // Clear smokes aliases
-alias "clear_smokes" "record record.record; ent_fire smokegrenade_projectile kill; stop"
+alias "clear_smokes" "ent_fire smokegrenade_projectile kill; ent_fire decoy_projectile kill; stopsound"
 alias "+alt" "bind X clear_smokes"
 alias "-alt" "bind X +jumpthrow"
-
-// Misc aliases
-alias "bot_reset" "bot_kick; bot_add_ct; bot_add_ct; bot_add_ct; bot_add_t; bot_add_t; bot_add_t"
 
 // Buy aliases
 alias "buy_vest_helm" "give item_assaultsuit"
@@ -49,109 +42,104 @@ alias "buy_hegrenade" "give weapon_hegrenade"
 bind "INS" "give weapon_elite"
 bind "DEL" "give weapon_mp5sd"
 bind "HOME" "give weapon_fiveseven; give weapon_tec9"
-bind "KP_END" "give weapon_ak47; give weapon_m4a1_silencer; give weapon_m4a1" // 1
-bind "KP_DOWNARROW" "give weapon_galilar; give weapon_famas" // 2
-bind "KP_PGDN" "give weapon_ump45" // 3
-bind "KP_LEFTARROW" "give weapon_awp" // 4
-bind "KP_5" "give weapon_ssg08" // 5
-bind "KP_RIGHTARROW" "give weapon_sg556; give weapon_aug" // 6
-bind "KP_HOME" "give weapon_mac10; give weapon_mp9" // 7
-bind "KP_UPARROW" "give weapon_p90" // 8
-bind "KP_PGUP" "give weapon_negev" // 9
-bind "KP_INS" "buy_defuser" // 0
+bind "KP_1" "give weapon_ak47; give weapon_m4a1_silencer; give weapon_m4a1" // End
+bind "KP_2" "give weapon_galilar; give weapon_famas" // Down Arrow
+bind "KP_3" "give weapon_ump45" // Page Down
+bind "KP_4" "give weapon_awp" // Left Arrow
+bind "KP_5" "give weapon_ssg08" // Center
+bind "KP_6" "give weapon_sg556; give weapon_aug" // Right Arrow
+bind "KP_7" "give weapon_mac10; give weapon_mp9" // Home
+bind "KP_8" "give weapon_p90" // Up Arrow
+bind "KP_9" "give weapon_negev" // Page Up
+bind "KP_0" "buy_defuser" // Insert
 bind "KP_DEL" "give weapon_taser" // Dot
 bind "KP_ENTER" "buy_vest_helm" // Enter
 bind "KP_MULTIPLY" "give weapon_mag7; give weapon_sawedoff" // Asterisk
-bind "KP_SLASH" "give weapon_xm1014" // Slash
+bind "KP_DIVIDE" "give weapon_xm1014" // Slash
 
 // Binds
-bind "SHIFT" "+speed"
+bind "SHIFT" "+sprint"
 bind "CTRL" "+duck"
 bind "ALT" "+alt"
-bind "F1" "toggle_noclip"
+bind "F1" "noclip"
 bind "F2" "bot_place"
 bind "F3" "toggle bot_crouch"
 bind "F4" "toggle bot_mimic"
 bind "F5" "sv_rethrow_last_grenade"
 bind "F6" "toggle_cam"
-bind "F7" "toggle r_drawothermodels 2 1"
+bind "F7" "toggle buddha"
 bind "F8" "mp_restartgame 1"
 unbind "F9"
 unbind "F10"
 unbind "F11"
 unbind "F12"
-bind "I" "exec knife"
-bind "F" "+lookatweapon; r_cleardecals"
 bind "H" "load_position"
 bind "J" "save_position"
 bind "K" "+fastforward"
 bind "N" "ent_teleport 1"
-bind "," "bot_add_t"
-bind "." "bot_add_ct"
-bind "/" "god; bot_reset"
 
 // Bots
-gods
+buddha false
 bot_kick
-bot_quota "15"
-bot_stop "1"
-bot_dont_shoot "1"
+bot_quota 15
+bot_stop 1
+bot_dont_shoot true
 bot_knives_only
-bot_chatter "off"
-bot_allow_rogues "1"
-bot_difficulty "3"
-mp_bot_ai_bt "scripts/ai/deathmatch/bt_default.kv3"
-mp_solid_teammates "1"
-mp_free_armor "2"
-mp_max_armor "2"
-mp_friendlyfire "1"
-mp_autoteambalance "0"
-mp_limitteams "0"
+bot_chatter off
+bot_allow_rogues true
+bot_difficulty 3
+custom_bot_difficulty 3
+mp_limitteams 0
+mp_solid_teammates 1
+mp_free_armor 2
+mp_max_armor 2
+mp_friendlyfire true
+mp_autoteambalance false
 
 // Times & Conditions
-mp_warmuptime "1"
-mp_freezetime "1"
-mp_respawn_on_death_ct "1"
-mp_respawn_on_death_t "1"
-mp_round_restart_delay "1"
-mp_halftime_duration "1"
-mp_c4timer "10"
-mp_roundtime "60"
-mp_roundtime_defuse "60"
-mp_roundtime_hostage "60"
-mp_endmatch_votenextmap "0"
-mp_drop_knife_enable "1"
-mp_ignore_round_win_conditions "1"
-mp_teammates_are_enemies "1"
-mp_radar_showall "1"
-mp_plant_c4_anywhere "1"
-mp_anyone_can_pickup_c4 "1"
+mp_warmuptime 1
+mp_freezetime 1
+mp_respawn_on_death_ct true
+mp_respawn_on_death_t true
+mp_round_restart_delay 1
+mp_halftime_duration 1
+mp_c4timer 10
+mp_roundtime 60
+mp_roundtime_defuse 60
+mp_roundtime_hostage 60
+mp_endmatch_votenextmap false
+mp_drop_knife_enable false
+mp_ignore_round_win_conditions true
+mp_teammates_are_enemies true
+mp_plant_c4_anywhere false
+mp_anyone_can_pickup_c4 true
+mp_team_intro_time 0
+inferno_flame_lifetime 3
 
 // Buy
-mp_buy_anywhere "1"
-mp_buytime "36000"
-mp_maxmoney "64000"
-mp_startmoney "64000"
-mp_afterroundmoney "64000"
+mp_buy_anywhere 1
+mp_buytime 36000
+mp_maxmoney 64000
+mp_startmoney 64000
+mp_afterroundmoney 64000
 
-// Impacts & Trajectory
-sv_showimpacts "1"
-sv_showimpacts_time "3"
-sv_grenade_trajectory "1"
-sv_grenade_trajectory_dash "1"
-sv_grenade_trajectory_time "10"
-sv_grenade_trajectory_thickness "0.5"
+// Impacts
+sv_showimpacts 1
+sv_showimpacts_time 3
+sv_grenade_trajectory_prac_trailtime 10
+sv_grenade_trajectory_prac_pipreview true
 
 // Grenades
-ammo_grenade_limit_default "1"
-ammo_grenade_limit_flashbang "1"
-ammo_grenade_limit_total "5"
+ammo_grenade_limit_default 1
+ammo_grenade_limit_flashbang 1
+ammo_grenade_limit_total 5
 
 // Misc
-cam_idealdist "120"
-cam_idealyaw "0"
-cl_showpos "1"
+cam_idealdist 120
+cam_idealyaw 0
+cl_showpos 0
+cl_showfps 0
 
 // Restart
-mp_restartgame "1"
+mp_restartgame 1
 mp_warmup_end
