--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -115,15 +115,15 @@ ui_mainmenu_bkgnd_movie_1016BB11 de_inferno
 //// Crosshair
 crosshair true
 cl_crosshairstyle 4 // Static
-cl_crosshaircolor 2 // Yellow
+cl_crosshaircolor 0 // Red
 cl_crosshaircolor_r 255
-cl_crosshaircolor_g 255
+cl_crosshaircolor_g 0
 cl_crosshaircolor_b 0
 cl_crosshairdot false
 cl_crosshairgap -3
 cl_crosshairgap_useweaponvalue false
 cl_crosshairsize 1.5
-cl_crosshairthickness 1.0
+cl_crosshairthickness 0.5
 cl_crosshairusealpha true
 cl_crosshairalpha 190
 cl_crosshair_drawoutline false
@@ -145,7 +145,7 @@ cl_crosshair_friendly_warning 1
 con_enable true
 gameinstructor_enable false
 cq_netgraph 0
-cq_netgraph_problem_show_auto true
+cq_netgraph_problem_show_auto false
 ui_setting_advertiseforhire_auto 0
 ui_steam_overlay_notification_position bottomleft
 player_nevershow_communityservermessage 1
