--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -99,7 +99,7 @@ cl_buywheel_donate_key 0
 cl_silencer_mode 0
 cl_teamid_overhead_mode 1
 cl_teamid_overhead_colors_show 1
-cl_hide_avatar_images 1
+cl_hide_avatar_images 0
 cl_allow_animated_avatars false
 cl_sanitize_player_names false
 cl_sanitize_muted_players false
@@ -162,15 +162,17 @@ cl_dm_buyrandomweapons false
 ////
 
 //// Buy aliases
-alias "full_buy_1" "buy_rifle_1; buy_vest_helm; grenades_3; buy_defuser" // T:4400$ CT:5000$
-alias "full_buy_2" "buy_rifle_2; buy_vest_helm; grenades_3; buy_defuser" // T:3500$ CT:4150$
-alias "half_buy" "buy_pistol_1; buy_vest_only; grenades_4" // 1850$
-alias "eco_buy" "buy_pistol_2; buy_flash" // 500$
-alias "grenades_1" "buy_molotov; buy_smoke; buy_flash; buy_flash"  // T:1100$ CT:1300$
-alias "grenades_2" "buy_molotov; buy_smoke; buy_flash; buy_hegrenade" // T:1200$ CT:1400$
+alias "full_buy_1" "buy_rifle_1; buy_vest_helm; buy_defuser" // T:3700$ CT:4300$
+alias "full_buy_2" "buy_rifle_2; buy_vest_helm; buy_defuser" // T:2800$ CT:3450$
+alias "full_buy_3" "buy_midtier_1; buy_vest_helm; buy_defuser" // T:3000$ CT:3400$
+alias "half_buy_1" "buy_midtier_2; buy_vest_only" // T:$1700 CT:$1900
+alias "half_buy_2" "buy_pistol_2; buy_vest_only" // 1350$
+alias "eco_buy" "buy_pistol_1" // 300$
+alias "grenades_1" "buy_molotov; buy_smoke; buy_flash; buy_hegrenade" // T:1200$ CT:1400$
+alias "grenades_2" "buy_molotov; buy_smoke; buy_flash; buy_flash"  // T:1100$ CT:1300$
 alias "grenades_3" "buy_smoke; buy_flash; buy_flash" // 700$
 alias "grenades_4" "buy_flash; buy_smoke" // 500$
-alias "buy_vest_helm" "buy vest; buy vesthelm" // 1000$
+alias "buy_vest_helm" "buy vesthelm" // 1000$
 alias "buy_vest_only" "buy vest" // 650$
 alias "buy_defuser" "buy defuser" // 400$
 alias "buy_flash" "buy flashbang" // 200$
@@ -179,14 +181,16 @@ alias "buy_molotov" "buy molotov; buy incgrenade" // T:400$ CT:600$
 alias "buy_hegrenade" "buy hegrenade" // 300$
 alias "buy_rifle_1" "buy rifle2" // AK, M4
 alias "buy_rifle_2" "buy rifle0" // Galil, Famas
-alias "buy_pistol_1" "buy secondary4" // Deagle
-alias "buy_pistol_2" "buy secondary1" // P250
+alias "buy_midtier_1" "buy midtier4" // XM1014
+alias "buy_midtier_2" "buy midtier0" // MAC-10, MP9
+alias "buy_pistol_1" "buy secondary1" // P250
+alias "buy_pistol_2" "buy secondary4" // Deagle
 
 //// General aliases
 alias "+drop_bomb" "slot3; slot5; drop"
 alias "-drop_bomb" "slot2; slot1"
-alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K half_buy; bind L eco_buy"
-alias "unbind_sets" "unbind H; unbind J; unbind K; unbind L"
+alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K full_buy_3; bind L half_buy_1; bind B half_buy_2; bind N eco_buy"
+alias "unbind_sets" "bind H grenades_1; bind J grenades_2; bind K grenades_3; bind L grenades_4; bind B buymenu; bind N sellall"
 
 //// Volume aliases
 alias "volume_up" "volume_set_80"
@@ -228,7 +232,19 @@ alias "-jumpthrow" "-jump"
 alias "+jumpduck" "+jump; +duck"
 alias "-jumpduck" "-jump; -duck"
 
-//// Show netgrap with scores
+//// Refund all
+alias "sell_pistol" "sellback 2; sellback 3; sellback 4; sellback 5; sellback 6"
+alias "sell_midtier" "sellback 8; sellback 9; sellback 10; sellback 11; sellback 12"
+alias "sell_rifle" "sellback 14; sellback 15; sellback 16; sellback 17; sellback 18"
+alias "sell_grenade" "sellback 26; sellback 26; sellback 27; sellback 28; sellback 29; sellback 30"
+alias "sell_eq" "sellback 32; sellback 33; sellback 34; sellback 35"
+alias "sellall" "sell_pistol; sell_midtier; sell_rifle; sell_grenade; sell_eq"
+
+//// Show equipment toggle
+alias "+show_eq" "+use; cl_teamid_overhead_mode 2"
+alias "-show_eq" "-use; cl_teamid_overhead_mode 1"
+
+//// Show scores with netgraph toggle
 alias "+show_scores" "+showscores; cq_netgraph 1"
 alias "-show_scores" "-showscores; cq_netgraph 0"
 
@@ -247,7 +263,7 @@ bind "MOUSE3" "player_ping"
 bind "MOUSE4" "slot10" // Molotov
 bind "MOUSE5" "slot7" // Flashbang
 bind "MWHEELUP" "+jump"
-bind "MWHEELDOWN" ""
+bind "MWHEELDOWN" "clutch_mode_toggle"
 
 //// Function keys
 bind "ESCAPE" "cancelselect"
@@ -273,15 +289,6 @@ unbind "F10"
 bind "F11" "mute"
 bind "F12" "jpeg"
 
-//// Middle function keys
-bind "PAUSE" "pause"
-bind "INS" "buy elite"
-bind "DEL" "buy mp7"
-bind "HOME" "buy fiveseven; buy tec9"
-bind "END" "grenades_1"
-bind "PGUP" "grenades_4"
-bind "PGDN" "grenades_2"
-
 //// Numeric keys
 bind "1" "slot1"
 bind "2" "slot2"
@@ -302,7 +309,7 @@ bind "D" "+right"
 
 //// 1st row (QWERTY) keys
 bind "Q" "+quickinv"
-bind "E" "+use"
+bind "E" "+show_eq"
 bind "R" "+reload"
 bind "T" "+spray_menu"
 bind "Y" "messagemode"
@@ -317,10 +324,10 @@ bind "\" "buy_vest_helm; buy_defuser"
 //// 2nd row (FGHJKL) keys
 bind "F" "+lookatweapon"
 bind "G" "drop"
-unbind "H"
-unbind "J"
-unbind "K"
-unbind "L"
+bind "H" "grenades_1"
+bind "J" "grenades_2"
+bind "K" "grenades_3"
+bind "L" "grenades_4"
 
 //// 3rd row (ZXCVBN) keys
 bind "Z" "slot8" // Smoke
@@ -328,7 +335,7 @@ bind "X" "+jumpthrow"
 bind "C" "+radar_scale"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
-bind "N" "clutch_mode_toggle"
+bind "N" "sellall"
 bind "M" "teammenu"
 bind "," "buyammo1"
 bind "." "buyammo2"
@@ -340,21 +347,30 @@ bind "DOWNARROW" "negative"
 bind "RIGHTARROW" "enemyspot"
 bind "LEFTARROW" "sectorclear"
 
+//// Middle function keys
+bind "PAUSE" "pause"
+bind "INS" "buy deagle"
+bind "DEL" "buy p250"
+bind "HOME" "buy fiveseven; buy tec9"
+bind "END" "buy elite"
+bind "PGUP" "buy awp"
+bind "PGDN" "buy ssg08"
+
 //// Numeric keyboard keys
-bind "KP_1" "buy_rifle_1" // End
-bind "KP_2" "buy_rifle_2" // Down Arrow
-bind "KP_3" "buy ump45" // Page Down
-bind "KP_4" "buy awp" // Left Arrow
-bind "KP_5" "buy ssg08" // Center
-bind "KP_6" "buy sg556; buy aug" // Right Arrow
-bind "KP_7" "buy mac10; buy mp9" // Home
-bind "KP_8" "buy p90" // Up Arrow
-bind "KP_9" "buy negev" // Page Up
+bind "KP_1" "buy ak47" // End
+bind "KP_2" "buy m4a1" // Down Arrow
+bind "KP_3" "buy m4a1_silencer" // Page Down
+bind "KP_4" "buy galilar; buy famas" // Left Arrow
+bind "KP_5" "buy nova" // Center
+bind "KP_6" "buy mac10; buy mp9" // Right Arrow
+bind "KP_7" "buy sg556; buy aug" // Home
+bind "KP_8" "buy xm1014" // Up Arrow
+bind "KP_9" "buy mp5sd; buy mp7" // Page Up
 bind "KP_0" "buy_defuser" // Insert
 bind "KP_DEL" "buy taser" // Dot
 bind "KP_ENTER" "buy_vest_helm" // Enter
-bind "KP_MULTIPLY" "buy mag7; buy sawedoff" // Asterisk
-bind "KP_DIVIDE" "buy xm1014" // Slash
+bind "KP_MULTIPLY" "buy p90" // Asterisk
+bind "KP_DIVIDE" "buy sawedoff; buy mag7" // Slash
 bind "KP_PLUS" "volume_up" // Plus
 bind "KP_MINUS" "volume_down" // Minus
 
