--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -162,18 +162,18 @@ cl_dm_buyrandomweapons false
 ////
 
 //// Buy aliases
-alias "full_buy_1" "buy_rifle_1; buy_vest_helm; buy_defuser" // T:3700$ CT:4300$
-alias "full_buy_2" "buy_rifle_2; buy_vest_helm; buy_defuser" // T:2800$ CT:3450$
-alias "full_buy_3" "buy_midtier_1; buy_vest_helm; buy_defuser" // T:3000$ CT:3400$
-alias "half_buy_1" "buy_midtier_2; buy_vest_only" // T:$1700 CT:$1900
-alias "half_buy_2" "buy_pistol_2; buy_vest_only" // 1350$
+alias "full_buy_1" "buy_rifle_1; buy_kevlar; buy_defuser" // T:3700$ CT:4300$
+alias "full_buy_2" "buy_rifle_2; buy_kevlar; buy_defuser" // T:2800$ CT:3450$
+alias "full_buy_3" "buy_midtier_1; buy_kevlar; buy_defuser" // T:3000$ CT:3400$
+alias "half_buy_1" "buy_midtier_2; buy_vest" // T:$1700 CT:$1900
+alias "half_buy_2" "buy_pistol_2; buy_vest" // 1350$
 alias "eco_buy" "buy_pistol_1" // 300$
 alias "grenades_1" "buy_molotov; buy_smoke; buy_flash; buy_hegrenade" // T:1200$ CT:1400$
 alias "grenades_2" "buy_molotov; buy_smoke; buy_flash; buy_flash"  // T:1100$ CT:1300$
 alias "grenades_3" "buy_smoke; buy_flash; buy_flash" // 700$
 alias "grenades_4" "buy_flash; buy_smoke" // 500$
-alias "buy_vest_helm" "buy vesthelm" // 1000$
-alias "buy_vest_only" "buy vest" // 650$
+alias "buy_kevlar" "buy vesthelm; buy vest" // 1000$
+alias "buy_vest" "buy vest" // 650$
 alias "buy_defuser" "buy defuser" // 400$
 alias "buy_flash" "buy flashbang" // 200$
 alias "buy_smoke" "buy smokegrenade" // 300$
@@ -205,8 +205,8 @@ alias "volume_set_100" "alias volume_down volume_set_80; alias volume_up volume_
 //// Radar aliases
 alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 1.0"
 alias "radar_scale_big" "cl_radar_scale 0.6; cl_hud_radar_scale 1.2"
-alias "+radar_scale" "+use; radar_scale_big"
-alias "-radar_scale" "-use; radar_scale_normal"
+alias "+radar_scale" "radar_scale_big"
+alias "-radar_scale" "radar_scale_normal"
 alias "radar_hide" "cl_drawhud_force_radar -1; alias toggle_radar radar_show"
 alias "radar_show" "cl_drawhud_force_radar 1; alias toggle_radar radar_hide"
 alias "toggle_radar" "radar_hide"
@@ -241,8 +241,8 @@ alias "sell_eq" "sellback 32; sellback 33; sellback 34; sellback 35"
 alias "sellall" "sell_pistol; sell_midtier; sell_rifle; sell_grenade; sell_eq"
 
 //// Show equipment toggle
-alias "+show_eq" "+use; cl_teamid_overhead_mode 2"
-alias "-show_eq" "-use; cl_teamid_overhead_mode 1"
+alias "+show_eq" "cl_teamid_overhead_mode 2"
+alias "-show_eq" "cl_teamid_overhead_mode 1"
 
 //// Show scores with netgraph toggle
 alias "+show_scores" "+showscores; cq_netgraph 1"
@@ -281,8 +281,8 @@ bind "F2" "demoui"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
 bind "F5" "say glgl"
-bind "F6" "save quick"
-bind "F7" "load quick"
+bind "F6" "say gh"
+bind "F7" "say ggs"
 bind "F8" "disconnect"
 unbind "F9"
 unbind "F10"
@@ -308,18 +308,18 @@ bind "A" "+left"
 bind "D" "+right"
 
 //// 1st row (QWERTY) keys
-bind "Q" "+quickinv"
-bind "E" "+show_eq"
+bind "Q" "+show_eq"
+bind "E" "+use"
 bind "R" "+reload"
 bind "T" "+spray_menu"
 bind "Y" "messagemode"
 bind "U" "messagemode2"
-unbind "I"
+bind "I" "+quickinv"
 bind "O" "+radialradio"
 bind "P" "radio2"
 bind "[" "invprev"
 bind "]" "invnext"
-bind "\" "buy_vest_helm; buy_defuser"
+bind "\" "buy_kevlar; buy_defuser"
 
 //// 2nd row (FGHJKL) keys
 bind "F" "+lookatweapon"
@@ -361,16 +361,16 @@ bind "KP_1" "buy ak47" // End
 bind "KP_2" "buy m4a1" // Down Arrow
 bind "KP_3" "buy m4a1_silencer" // Page Down
 bind "KP_4" "buy galilar; buy famas" // Left Arrow
-bind "KP_5" "buy nova" // Center
+bind "KP_5" "buy xm1014" // Center
 bind "KP_6" "buy mac10; buy mp9" // Right Arrow
 bind "KP_7" "buy sg556; buy aug" // Home
-bind "KP_8" "buy xm1014" // Up Arrow
+bind "KP_8" "buy sawedoff; buy mag7" // Up Arrow
 bind "KP_9" "buy mp5sd; buy mp7" // Page Up
 bind "KP_0" "buy_defuser" // Insert
 bind "KP_DEL" "buy taser" // Dot
-bind "KP_ENTER" "buy_vest_helm" // Enter
+bind "KP_ENTER" "buy_kevlar" // Enter
 bind "KP_MULTIPLY" "buy p90" // Asterisk
-bind "KP_DIVIDE" "buy sawedoff; buy mag7" // Slash
+bind "KP_DIVIDE" "buy nova" // Slash
 bind "KP_PLUS" "volume_up" // Plus
 bind "KP_MINUS" "volume_down" // Minus
 
