--- a/training.cfg
+++ b/training.cfg
@@ -30,8 +30,8 @@ alias "+alt" "bind X clear_smokes"
 alias "-alt" "bind X +jumpthrow"
 
 // Buy aliases
-alias "buy_vest_helm" "give item_assaultsuit"
-alias "buy_vest_only" "give item_kevlar"
+alias "buy_kevlar" "give item_assaultsuit"
+alias "buy_vest" "give item_kevlar"
 alias "buy_defuser" "give item_defuser; give weapon_c4"
 alias "buy_flash" "give weapon_flashbang"
 alias "buy_smoke" "give weapon_smokegrenade"
@@ -39,23 +39,26 @@ alias "buy_molotov" "give weapon_incgrenade; give weapon_molotov"
 alias "buy_hegrenade" "give weapon_hegrenade"
 
 // Buy binds
-bind "INS" "give weapon_elite"
+bind "INS" "give weapon_deagle"
 bind "DEL" "give weapon_mp5sd"
 bind "HOME" "give weapon_fiveseven; give weapon_tec9"
-bind "KP_1" "give weapon_ak47; give weapon_m4a1_silencer; give weapon_m4a1" // End
-bind "KP_2" "give weapon_galilar; give weapon_famas" // Down Arrow
-bind "KP_3" "give weapon_ump45" // Page Down
-bind "KP_4" "give weapon_awp" // Left Arrow
-bind "KP_5" "give weapon_ssg08" // Center
-bind "KP_6" "give weapon_sg556; give weapon_aug" // Right Arrow
-bind "KP_7" "give weapon_mac10; give weapon_mp9" // Home
-bind "KP_8" "give weapon_p90" // Up Arrow
-bind "KP_9" "give weapon_negev" // Page Up
+bind "END" "give weapon_elite"
+bind "PGUP" "give weapon_awp"
+bind "PGDN" "give weapon_ssg08"
+bind "KP_1" "give weapon_ak47" // End
+bind "KP_2" "give weapon_m4a1" // Down Arrow
+bind "KP_3" "give weapon_m4a1_silencer" // Page Down
+bind "KP_4" "give weapon_galilar; give weapon_famas" // Left Arrow
+bind "KP_5" "give weapon_xm1014" // Center
+bind "KP_6" "give weapon_mac10; give weapon_mp9" // Right Arrow
+bind "KP_7" "give weapon_sg556; give weapon_aug" // Home
+bind "KP_8" "give weapon_sawedoff; give weapon_mag7" // Up Arrow
+bind "KP_9" "give weapon_mp5sd; give weapon_mp7" // Page Up
 bind "KP_0" "buy_defuser" // Insert
 bind "KP_DEL" "give weapon_taser" // Dot
-bind "KP_ENTER" "buy_vest_helm" // Enter
-bind "KP_MULTIPLY" "give weapon_mag7; give weapon_sawedoff" // Asterisk
-bind "KP_DIVIDE" "give weapon_xm1014" // Slash
+bind "KP_ENTER" "buy_kevlar" // Enter
+bind "KP_MULTIPLY" "give weapon_p90" // Asterisk
+bind "KP_DIVIDE" "give weapon_nova" // Slash
 
 // Binds
 bind "SHIFT" "+sprint"
