--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -187,6 +187,7 @@ alias "buy_pistol_1" "buy secondary1" // P250
 alias "buy_pistol_2" "buy secondary4" // Deagle
 
 //// General aliases
+alias "exit" "disconnect"
 alias "+drop_bomb" "slot3; slot5; drop"
 alias "-drop_bomb" "slot2; slot1"
 alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K full_buy_3; bind L half_buy_1; bind B half_buy_2; bind N eco_buy"
@@ -290,9 +291,9 @@ bind "F11" "mute"
 bind "F12" "jpeg"
 
 //// Numeric keys
-bind "1" "slot1"
-bind "2" "slot2"
-bind "3" "slot3"
+bind "1" "slot1" // Primary
+bind "2" "slot2" // Secondary
+bind "3" "slot3" // Knife, Taser
 bind "4" "slot6" // HE Grenade
 bind "5" "slot5" // C4, Healtshot
 bind "6" "slot9" // Decoy
@@ -308,7 +309,7 @@ bind "A" "+left"
 bind "D" "+right"
 
 //// 1st row (QWERTY) keys
-bind "Q" "+show_eq"
+bind "Q" "+radar_scale"
 bind "E" "+use"
 bind "R" "+reload"
 bind "T" "+spray_menu"
@@ -332,7 +333,7 @@ bind "L" "grenades_4"
 //// 3rd row (ZXCVBN) keys
 bind "Z" "slot8" // Smoke
 bind "X" "+jumpthrow"
-bind "C" "+radar_scale"
+bind "C" "+show_eq"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
 bind "N" "sellall"
