--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -193,6 +193,16 @@ alias "-drop_bomb" "slot2; slot1"
 alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K full_buy_3; bind L half_buy_1; bind B half_buy_2; bind N eco_buy"
 alias "unbind_sets" "bind H grenades_1; bind J grenades_2; bind K grenades_3; bind L grenades_4; bind B buymenu; bind N sellall"
 
+//// Desubtick movement
+alias "+de_forward" "+forward; +forward"
+alias "-de_forward" "-forward; -forward; -forward"
+alias "+de_back" "+back; +back"
+alias "-de_back" "-back; -back; -back"
+alias "+de_left" "+left; +left"
+alias "-de_left" "-left; -left; -left"
+alias "+de_right" "+right; +right"
+alias "-de_right" "-right; -right; -right"
+
 //// Volume aliases
 alias "volume_up" "volume_set_80"
 alias "volume_down" "volume_set_40"
@@ -230,8 +240,8 @@ alias "+jumpthrow" "+jump; +throw"
 alias "-jumpthrow" "-jump"
 
 //// Jump and crouch
-alias "+jumpduck" "+jump; +duck"
-alias "-jumpduck" "-jump; -duck"
+alias "+jumpduck" "+duck; +jump"
+alias "-jumpduck" "-duck; -jump"
 
 //// Refund all
 alias "sell_pistol" "sellback 2; sellback 3; sellback 4; sellback 5; sellback 6"
@@ -263,7 +273,7 @@ bind "MOUSE2" "+attack2"
 bind "MOUSE3" "player_ping"
 bind "MOUSE4" "slot10" // Molotov
 bind "MOUSE5" "slot7" // Flashbang
-bind "MWHEELUP" "+jump"
+bind "MWHEELUP" "+jump; -jump"
 bind "MWHEELDOWN" "clutch_mode_toggle"
 
 //// Function keys
@@ -303,10 +313,10 @@ unbind "9"
 unbind "0"
 
 //// Movement keys
-bind "W" "+forward"
-bind "S" "+back"
-bind "A" "+left"
-bind "D" "+right"
+bind "W" "+de_forward"
+bind "S" "+de_back"
+bind "A" "+de_left"
+bind "D" "+de_right"
 
 //// 1st row (QWERTY) keys
 bind "Q" "+radar_scale"
