--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -22,7 +22,7 @@ snd_mapobjective_volume 0.12
 snd_tensecondwarning_volume 0.06
 snd_deathcamera_volume 0.12
 snd_mvp_volume 0.12
-snd_voipvolume 0.24
+snd_voipvolume 0.36
 sv_voiceenable true
 voice_modenable true
 snd_headphone_eq 0
@@ -170,7 +170,7 @@ alias "half_buy_2" "buy_pistol_2; buy_vest" // 1350$
 alias "eco_buy" "buy_pistol_1" // 300$
 alias "grenades_1" "buy_molotov; buy_smoke; buy_flash; buy_hegrenade" // T:1200$ CT:1400$
 alias "grenades_2" "buy_molotov; buy_smoke; buy_flash; buy_flash"  // T:1100$ CT:1300$
-alias "grenades_3" "buy_smoke; buy_flash; buy_flash" // 700$
+alias "grenades_3" "buy_smoke; buy_flash; buy_flash; buy_hegrenade" // 1000$
 alias "grenades_4" "buy_flash; buy_smoke" // 500$
 alias "buy_kevlar" "buy vesthelm; buy vest" // 1000$
 alias "buy_vest" "buy vest" // 650$
@@ -249,7 +249,7 @@ alias "sell_midtier" "sellback 8; sellback 9; sellback 10; sellback 11; sellback
 alias "sell_rifle" "sellback 14; sellback 15; sellback 16; sellback 17; sellback 18"
 alias "sell_grenade" "sellback 26; sellback 26; sellback 27; sellback 28; sellback 29; sellback 30"
 alias "sell_eq" "sellback 32; sellback 33; sellback 34; sellback 35"
-alias "sellall" "sell_pistol; sell_midtier; sell_rifle; sell_grenade; sell_eq"
+alias "sellall" "sell_pistol; sell_midtier; sell_rifle; sell_grenade; sell_eq; play ui\menu_focus.vsnd"
 
 //// Show equipment toggle
 alias "+show_eq" "cl_teamid_overhead_mode 2"
@@ -305,7 +305,7 @@ bind "1" "slot1" // Primary
 bind "2" "slot2" // Secondary
 bind "3" "slot3" // Knife, Taser
 bind "4" "slot6" // HE Grenade
-bind "5" "slot5" // C4, Healtshot
+bind "5" "slot5; slot12" // C4, Healtshot
 bind "6" "slot9" // Decoy
 unbind "7"
 unbind "8"
@@ -319,7 +319,7 @@ bind "A" "+de_left"
 bind "D" "+de_right"
 
 //// 1st row (QWERTY) keys
-bind "Q" "+radar_scale"
+bind "Q" "+show_eq"
 bind "E" "+use"
 bind "R" "+reload"
 bind "T" "+spray_menu"
@@ -343,7 +343,7 @@ bind "L" "grenades_4"
 //// 3rd row (ZXCVBN) keys
 bind "Z" "slot8" // Smoke
 bind "X" "+jumpthrow"
-bind "C" "+show_eq"
+bind "C" "+radar_scale"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
 bind "N" "sellall"
