--- a/training.cfg
+++ b/training.cfg
@@ -12,8 +12,8 @@ sv_regeneration_force_on true
 mp_autokick false
 
 // Teleportation aliases (CS:GO)
-alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con_logfile .; play ui\csgo_ui_crate_item_scroll.wav"
-alias "load_position" "exec banned_ip.log; noclip 0; play ui\csgo_ui_page_scroll.wav"
+alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con_logfile .; play ui\csgo_ui_crate_item_scroll.vsnd"
+alias "load_position" "exec banned_ip.log; noclip 0; play ui\csgo_ui_page_scroll.vsnd"
 
 // Timescale aliases
 alias "+fastforward" "host_timescale 5"
