--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,5 +1,5 @@
 ////
-// autoexec.cfg by MydlanyHeadzik
+// autoexec.cfg by Ba55rR
 ////
 
 ////
@@ -191,9 +191,9 @@ alias "exit" "disconnect"
 alias "+drop_bomb" "slot3; slot5; drop"
 alias "-drop_bomb" "slot2; slot1"
 alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K full_buy_3; bind L half_buy_1; bind B half_buy_2; bind N eco_buy"
-alias "unbind_sets" "bind H grenades_1; bind J grenades_2; bind K grenades_3; bind L grenades_4; bind B buymenu; bind N sellall"
+alias "unbind_sets" "bind H grenades_1; bind J grenades_2; bind K grenades_3; bind L grenades_4; bind B buymenu; bind N sellbackall"
 
-//// Desubtick movement
+//// Desubtick movement (not in use)
 alias "+de_forward" "+forward; +forward"
 alias "-de_forward" "-forward; -forward; -forward"
 alias "+de_back" "+back; +back"
@@ -213,6 +213,11 @@ alias "volume_set_60" "alias volume_down volume_set_40; alias volume_up volume_s
 alias "volume_set_80" "alias volume_down volume_set_60; alias volume_up volume_set_100; volume 0.48"
 alias "volume_set_100" "alias volume_down volume_set_80; alias volume_up volume_set_100; volume 0.60"
 
+//// Mute aliases
+alias "mute_players" "voice_off"
+alias "voice_off" "alias mute_players voice_on; snd_voipvolume 0; say_team Players muted."
+alias "voice_on" "alias mute_players voice_off; snd_voipvolume 0.36; say_team Players unmuted."
+
 //// Radar aliases
 alias "radar_scale_normal" "cl_radar_scale 0.4; cl_hud_radar_scale 1.0"
 alias "radar_scale_big" "cl_radar_scale 0.6; cl_hud_radar_scale 1.2"
@@ -223,16 +228,16 @@ alias "radar_show" "cl_drawhud_force_radar 1; alias toggle_radar radar_hide"
 alias "toggle_radar" "radar_hide"
 
 //// CTRL+G to drop bomb & CTRL+HJKL to buy sets
-alias "+ctrl" "+duck; bind G +drop_bomb; bind_sets"
-alias "-ctrl" "-duck; bind G drop; unbind_sets"
+alias "+duck_ctrl" "+duck; bind G +drop_bomb; bind_sets"
+alias "-duck_ctrl" "-duck; bind G drop; unbind_sets"
 
 //// ALT+C to toggle radar
 alias "+alt" "bind C toggle_radar"
 alias "-alt" "bind C +radar_scale"
 
 //// Increase volume when walking
-alias "+shift" "+sprint; volume_up"
-alias "-shift" "-sprint; volume_down"
+alias "+sprint_shift" "+sprint; volume_up"
+alias "-sprint_shift" "-sprint; volume_down"
 
 //// Jump and throw
 alias "+throw" "-attack; -attack2"
@@ -243,21 +248,16 @@ alias "-jumpthrow" "-jump"
 alias "+jumpduck" "+duck; +jump"
 alias "-jumpduck" "-duck; -jump"
 
-//// Refund all
-alias "sell_pistol" "sellback 2; sellback 3; sellback 4; sellback 5; sellback 6"
-alias "sell_midtier" "sellback 8; sellback 9; sellback 10; sellback 11; sellback 12"
-alias "sell_rifle" "sellback 14; sellback 15; sellback 16; sellback 17; sellback 18"
-alias "sell_grenade" "sellback 26; sellback 26; sellback 27; sellback 28; sellback 29; sellback 30"
-alias "sell_eq" "sellback 32; sellback 33; sellback 34; sellback 35"
-alias "sellall" "sell_pistol; sell_midtier; sell_rifle; sell_grenade; sell_eq; play ui\menu_focus.vsnd"
+//// Refund all with sound (not in use)
+alias "sellbackall_snd" "sellbackall; play ui\menu_focus.vsnd"
 
-//// Show equipment toggle
+//// Show equipment toggle (not in use)
 alias "+show_eq" "cl_teamid_overhead_mode 2"
 alias "-show_eq" "cl_teamid_overhead_mode 1"
 
 //// Show scores with netgraph toggle
-alias "+show_scores" "+showscores; cq_netgraph 1"
-alias "-show_scores" "-showscores; cq_netgraph 0"
+alias "+showscores_netgraph" "+showscores; cq_netgraph 1"
+alias "-showscores_netgraph" "-showscores; cq_netgraph 0"
 
 ////
 // Binds
@@ -274,15 +274,15 @@ bind "MOUSE3" "player_ping"
 bind "MOUSE4" "slot10" // Molotov
 bind "MOUSE5" "slot7" // Flashbang
 bind "MWHEELUP" "+jump; -jump"
-bind "MWHEELDOWN" "clutch_mode_toggle"
+bind "MWHEELDOWN" "mute_players" // "clutch_mode_toggle"
 
 //// Function keys
 bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
-bind "TAB" "+show_scores"
+bind "TAB" "+showscores_netgraph"
 unbind "CAPSLOCK"
-bind "SHIFT" "+shift"
-bind "CTRL" "+ctrl"
+bind "SHIFT" "+sprint_shift"
+bind "CTRL" "+duck_ctrl"
 bind "ALT" "+alt"
 bind "SPACE" "+jumpduck"
 
@@ -291,9 +291,9 @@ bind "F1" "ignorerad"
 bind "F2" "demoui"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
-bind "F5" "say glgl"
-bind "F6" "say gh"
-bind "F7" "say ggs"
+bind "F5" "say Have fun!"
+bind "F6" "say_team Let's go A!"
+bind "F7" "say_team Let's go B!"
 bind "F8" "disconnect"
 unbind "F9"
 unbind "F10"
@@ -313,13 +313,13 @@ unbind "9"
 unbind "0"
 
 //// Movement keys
-bind "W" "+de_forward"
-bind "S" "+de_back"
-bind "A" "+de_left"
-bind "D" "+de_right"
+bind "W" "+forward"
+bind "S" "+back"
+bind "A" "+left"
+bind "D" "+right"
 
 //// 1st row (QWERTY) keys
-bind "Q" "+show_eq"
+bind "Q" "+cl_show_team_equipment"
 bind "E" "+use"
 bind "R" "+reload"
 bind "T" "+spray_menu"
@@ -346,7 +346,7 @@ bind "X" "+jumpthrow"
 bind "C" "+radar_scale"
 bind "V" "+voicerecord"
 bind "B" "buymenu"
-bind "N" "sellall"
+bind "N" "sellbackall"
 bind "M" "teammenu"
 bind "," "buyammo1"
 bind "." "buyammo2"
