--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -46,6 +46,7 @@ cl_player_ping_mute 0
 fps_max 300
 fps_max_ui 150
 r_fullscreen_gamma 2.3
+r_drawtracers_firstperson false
 r_player_visibility_mode 1
 r_show_build_info false
 engine_no_focus_sleep 60
