--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -111,7 +111,8 @@ cl_ping_fade_distance 300
 cl_ping_fade_deadzone 120
 cl_playerspray_auto_apply false
 mapoverview_icon_scale 1.0
-ui_mainmenu_bkgnd_movie_1016BB11 de_inferno
+ui_mainmenu_bkgnd_movie_B0B70CFF ar_baggage
+ui_inspect_bkgnd_map_B0B70CFF warehouse
 
 //// Crosshair
 crosshair true
@@ -133,8 +134,9 @@ cl_crosshair_dynamic_maxdist_splitratio 0.2
 cl_crosshair_dynamic_splitalpha_innermod 1
 cl_crosshair_dynamic_splitalpha_outermod 0.5
 cl_crosshair_dynamic_splitdist 0
-cl_crosshair_sniper_show_normal_inaccuracy false
 cl_crosshair_sniper_width 1
+cl_sniper_auto_rezoom false
+cl_sniper_delay_unscope false
 cl_crosshair_t false
 cl_crosshair_recoil false
 cl_show_observer_crosshair 2
@@ -145,8 +147,9 @@ cl_crosshair_friendly_warning 1
 ////
 con_enable true
 gameinstructor_enable false
-cq_netgraph 0
-cq_netgraph_problem_show_auto false
+cl_hud_telemetry_ping_show 0
+cl_hud_telemetry_net_misdelivery_show 0
+cl_hud_telemetry_frametime_show 0
 ui_setting_advertiseforhire_auto 0
 ui_steam_overlay_notification_position bottomleft
 player_nevershow_communityservermessage 1
@@ -256,9 +259,11 @@ alias "sellbackall_snd" "sellbackall; play ui\menu_focus.vsnd"
 alias "+show_eq" "cl_teamid_overhead_mode 2"
 alias "-show_eq" "cl_teamid_overhead_mode 1"
 
-//// Show scores with netgraph toggle
-alias "+showscores_netgraph" "+showscores; cq_netgraph 1"
-alias "-showscores_netgraph" "-showscores; cq_netgraph 0"
+//// Show scores with telemetry toggle
+alias "+show_telemetry" "cl_hud_telemetry_ping_show 2; cl_hud_telemetry_net_misdelivery_show 2; cl_hud_telemetry_frametime_show 2"
+alias "-show_telemetry" "cl_hud_telemetry_ping_show 0; cl_hud_telemetry_net_misdelivery_show 0; cl_hud_telemetry_frametime_show 0"
+alias "+showscores_telemetry" "+showscores; +show_telemetry"
+alias "-showscores_telemetry" "-showscores; -show_telemetry"
 
 ////
 // Binds
@@ -280,7 +285,7 @@ bind "MWHEELDOWN" "mute_players" // "clutch_mode_toggle"
 //// Function keys
 bind "ESCAPE" "cancelselect"
 bind "`" "toggleconsole"
-bind "TAB" "+showscores_netgraph"
+bind "TAB" "+showscores_telemetry"
 unbind "CAPSLOCK"
 bind "SHIFT" "+sprint_shift"
 bind "CTRL" "+duck_ctrl"
