--- a/training.cfg
+++ b/training.cfg
@@ -76,8 +76,8 @@ unbind "F9"
 unbind "F10"
 unbind "F11"
 unbind "F12"
-bind "H" "load_position"
-bind "J" "save_position"
+bind "H" "grenades_1" // "load_position"
+bind "J" "grenades_2" // "save_position"
 bind "K" "+fastforward"
 bind "N" "ent_teleport 1"
 
