--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -43,8 +43,8 @@ cl_player_ping_mute 0
 ////
 // Video
 ////
-fps_max 300
-fps_max_ui 150
+fps_max 160
+fps_max_ui 80
 r_fullscreen_gamma 2.3
 r_drawtracers_firstperson false
 r_player_visibility_mode 1
@@ -78,6 +78,7 @@ viewmodel_fov 68
 viewmodel_offset_x 2.5
 viewmodel_offset_y 0
 viewmodel_offset_z -1.5
+cl_usenewbob true
 
 //// Radar
 cl_radar_always_centered false
