--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -192,7 +192,7 @@ alias "buy_pistol_1" "buy secondary1" // P250
 alias "buy_pistol_2" "buy secondary4" // Deagle
 
 //// General aliases
-alias "exit" "disconnect"
+alias "exit" "disconnect; Test_ExitProcess"
 alias "+drop_bomb" "slot3; slot5; drop"
 alias "-drop_bomb" "slot2; slot1"
 alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K full_buy_3; bind L half_buy_1; bind B half_buy_2; bind N eco_buy"
@@ -280,7 +280,7 @@ bind "MOUSE2" "+attack2"
 bind "MOUSE3" "player_ping"
 bind "MOUSE4" "slot10" // Molotov
 bind "MOUSE5" "slot7" // Flashbang
-bind "MWHEELUP" "+jump; -jump"
+bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "mute_players" // "clutch_mode_toggle"
 
 //// Function keys
