--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,7 +13,7 @@ net_client_steamdatagram_enable_override 1
 // Audio
 ////
 
-volume 0.36
+volume 0.24
 snd_menumusic_volume 0
 snd_roundstart_volume 0.06
 snd_roundaction_volume 0.06
@@ -22,7 +22,7 @@ snd_mapobjective_volume 0.12
 snd_tensecondwarning_volume 0.06
 snd_deathcamera_volume 0.12
 snd_mvp_volume 0.12
-snd_voipvolume 0.36
+snd_voipvolume 0.48
 sv_voiceenable true
 voice_modenable true
 snd_headphone_eq 0
@@ -118,12 +118,12 @@ ui_inspect_bkgnd_map_B0B70CFF warehouse
 //// Crosshair
 crosshair true
 cl_crosshairstyle 4 // Static
-cl_crosshaircolor 0 // Red
+cl_crosshaircolor 4 // Cyan
 cl_crosshaircolor_r 255
 cl_crosshaircolor_g 0
 cl_crosshaircolor_b 0
 cl_crosshairdot false
-cl_crosshairgap -3
+cl_crosshairgap -4
 cl_crosshairgap_useweaponvalue false
 cl_crosshairsize 1.5
 cl_crosshairthickness 0.5
@@ -136,8 +136,9 @@ cl_crosshair_dynamic_splitalpha_innermod 1
 cl_crosshair_dynamic_splitalpha_outermod 0.5
 cl_crosshair_dynamic_splitdist 0
 cl_crosshair_sniper_width 1
-cl_sniper_auto_rezoom false
+cl_sniper_auto_rezoom true
 cl_sniper_delay_unscope false
+cl_debounce_zoom true
 cl_crosshair_t false
 cl_crosshair_recoil false
 cl_show_observer_crosshair 2
@@ -159,8 +160,9 @@ mm_csgo_community_search_players_min 3
 cl_join_advertise 2
 cl_invites_only_friends false
 spec_replay_autostart false
-cl_color 0
+cl_autobuy vesthelm m4a1_silencer ak47 famas galilar mp9 mac10 defuser
 cl_dm_buyrandomweapons false
+cl_color 0
 
 ////
 // Aliases
@@ -195,8 +197,8 @@ alias "buy_pistol_2" "buy secondary4" // Deagle
 alias "exit" "disconnect; Test_ExitProcess"
 alias "+drop_bomb" "slot3; slot5; drop"
 alias "-drop_bomb" "slot2; slot1"
-alias "bind_sets" "bind H full_buy_1; bind J full_buy_2; bind K full_buy_3; bind L half_buy_1; bind B half_buy_2; bind N eco_buy"
-alias "unbind_sets" "bind H grenades_1; bind J grenades_2; bind K grenades_3; bind L grenades_4; bind B buymenu; bind N sellbackall"
+alias "bind_sets" "bind B half_buy_1; bind N half_buy_2; bind M eco_buy"
+alias "unbind_sets" "bind B buymenu; bind N sellbackall; bind M teammenu"
 
 //// Desubtick movement (not in use)
 alias "+de_forward" "+forward; +forward"
@@ -209,8 +211,8 @@ alias "+de_right" "+right; +right"
 alias "-de_right" "-right; -right; -right"
 
 //// Volume aliases
-alias "volume_up" "volume_set_80"
-alias "volume_down" "volume_set_40"
+alias "volume_up" "volume_set_60"
+alias "volume_down" "volume_set_20"
 alias "volume_set_0" "alias volume_down volume_set_0; alias volume_up volume_set_20; volume 0.0"
 alias "volume_set_20" "alias volume_down volume_set_0; alias volume_up volume_set_40; volume 0.12"
 alias "volume_set_40" "alias volume_down volume_set_20; alias volume_up volume_set_60; volume 0.24"
@@ -298,9 +300,9 @@ bind "F1" "ignorerad"
 bind "F2" "demoui"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
-bind "F5" "say Have fun!"
-bind "F6" "say_team Let's go A!"
-bind "F7" "say_team Let's go B!"
+bind "F5" "full_buy_1"
+bind "F6" "full_buy_2"
+bind "F7" "full_buy_3"
 bind "F8" "disconnect"
 unbind "F9"
 unbind "F10"
