--- a/training.cfg
+++ b/training.cfg
@@ -1,5 +1,5 @@
 ////
-// training.cfg by MydlanyHeadzik
+// training.cfg by Ba55rR
 ////
 
 // General
@@ -7,6 +7,7 @@ writeip
 game_type 0
 game_mode 1
 sv_cheats true
+sv_noclipspeed 1200
 sv_infinite_ammo 2
 sv_regeneration_force_on true
 mp_autokick false
@@ -16,7 +17,7 @@ alias "save_position" "writeip; con_logfile cfg/banned_ip.log; getpos_exact; con
 alias "load_position" "exec banned_ip.log; noclip 0; play ui\csgo_ui_page_scroll.vsnd"
 
 // Timescale aliases
-alias "+fastforward" "host_timescale 5"
+alias "+fastforward" "host_timescale 8"
 alias "-fastforward" "host_timescale 1"
 
 // Toggle camera aliases
@@ -100,6 +101,7 @@ mp_friendlyfire true
 mp_autoteambalance false
 
 // Times & Conditions
+cl_versus_intro false
 mp_warmuptime 1
 mp_freezetime 1
 mp_respawn_on_death_ct true
